# next-message-prediction-public

./: .env.template  .gitignore  README.md  generate_dataset.py  generate_plot.py  generate_shorter_context_dataset.py  pyproject.toml  run_experiment.py  run_grid_experiment.py
data/discord-raw/: channel_a.csv
